# starkom

./: CODEOWNERS  Cargo.toml  README.md  build.rs
proto/: ast.proto
src/: compiler.rs  context.rs  error.rs  expr.rs  lexer.rs  lib.rs  parser.rs  utils.rs  values.rs
test/: expressions.starkom  hello.starkom  statements.starkom  vitalik.starkom
