[package]
name = "starkom"
version = "0.5.1"
description = "Starkom language compiler."
license = "Apache-2.0"
repository = "https://github.com/libernet-xyz/starkom.git"
readme = "README.md"
edition = "2024"

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
prost = "0.14.3"
regex = "1.12.3"
wasm-bindgen = "0.2.123"

[build-dependencies]
prost-build = "0.14.3"
